src/components/DropdownButton/DropdownButton.scss
@use '_variables' as vars;

.MyCrossword {
  .DropdownButton {
    position: relative;
    user-select: none;
  }
  .DropdownButton__button {
    background-color: vars.$button-background;
    color: vars.$button-color;
    padding: vars.$button-padding;
    margin: vars.$button-margin;
    font-weight: bold;
    border: none;
    cursor: pointer;
    white-space: nowrap;
    border-radius: vars.$border-radius;
  }
  .DropdownButton__dropdownButtonIcon {
    fill: vars.$button-color;
    margin-left: vars.$grid-size * 0.8;
  }
  .DropdownButton__button:hover,
  .DropdownButton--expanded .DropdownButton__button {
    background-color: vars.$button-background-selected;
  }
  .DropdownButton__menu {
    visibility: hidden;
    display: flex;
    flex-direction: column;
    overflow: hidden;
    position: absolute;
    background-color: vars.$dropdown-background;
    border: 1px solid vars.$dropdown-border;
    z-index: 1;
    margin: 0 vars.$grid-size * 0.5;
    border-radius: vars.$border-radius;
    min-width: calc(100% - #{vars.$grid-size});
    padding: 0;
    list-style: none;
  }
  .DropdownButton--expanded .DropdownButton__menu {
    visibility: visible;
  }
  .DropdownButton__menuItem {
    display: flex;
    background-color: transparent;
    border: none;
    padding: vars.$button-padding;
    white-space: nowrap;
    text-overflow: ellipsis;
    width: 100%;
  }
  .DropdownButton__menuItem:not(:disabled):hover {
    background-color: vars.$dropdown-item-hover;
    cursor: pointer;
  }
}

